// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Layout renders default state for first time user correctly 1`] = `
Array [
  <NavBar />,
  <LeftMenu
    activeItem=""
    isMenuExpanded={true}
    setIsMenuExpanded={[Function]}
  />,
  <div
    className="MuiBox-root MuiBox-root-7 HookGlobalStyles-main-6"
    style={
      Object {
        "marginLeft": 256,
      }
    }
  >
    <div />
  </div>,
]
`;

exports[`component: Layout renders default state for non first time user correctly 1`] = `
Array [
  <NavBar />,
  <LeftMenu
    activeItem=""
    isMenuExpanded={true}
    setIsMenuExpanded={[Function]}
  />,
  <div
    className="MuiBox-root MuiBox-root-9 HookGlobalStyles-main-6"
    style={
      Object {
        "marginLeft": 256,
      }
    }
  >
    <div />
  </div>,
]
`;

exports[`component: Layout renders passwordRequired state for first time user correctly 1`] = `
Array [
  <NavBar />,
  <LeftMenu
    activeItem=""
    isMenuExpanded={true}
    setIsMenuExpanded={[Function]}
  />,
  <div
    className="MuiBox-root MuiBox-root-8 HookGlobalStyles-main-6"
    style={
      Object {
        "marginLeft": 256,
      }
    }
  >
    <GetStarted />
  </div>,
]
`;

exports[`component: Layout renders passwordRequired state for non first time user correctly 1`] = `
Array [
  <NavBar />,
  <LeftMenu
    activeItem=""
    isMenuExpanded={true}
    setIsMenuExpanded={[Function]}
  />,
  <div
    className="MuiBox-root MuiBox-root-10 HookGlobalStyles-main-6"
    style={
      Object {
        "marginLeft": 256,
      }
    }
  />,
  <UnlockPasswordDialog />,
]
`;
